--- a/Practica/src/main/webapp/index.html
+++ b/Practica/src/main/webapp/index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Conexion a la base de datos</title>
+<title>Insert title here</title>
 </head>
-<body style="background:grey">
-
+<body>
+	
+	<form action="./Svmain" method="POST">
 	<h1>Gestion de estudiantes</h1>
-	<form action="SVConexion" method="POST">
-		<input type="text" name="query"><br>
-		<button type="submit">Ejecutar</button>
+		<input type="text" name="sentencesql">
+		<button type="submit">Enviar</button>
 	</form>
+
 </body>
 </html>
